force-app/main/default/objects/PDF_Query__c/PDF_Query__c.object-meta.xml
<CustomObject>
    <label>PDF Query</label>
    <nameField>
        <label>PDF Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>