force-app/main/default/objects/PDF_Query__c/fields/Agent_Response__c.field-meta.xml
<CustomField>
    <fullName>Agent_Response__c</fullName>
    <label>Agent Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>