force-app/main/default/objects/PDF_Query__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>