force-app/main/default/objects/PDF_Query__c/fields/User_Question__c.field-meta.xml
<CustomField>
    <fullName>User_Question__c</fullName>
    <label>User Question</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>